<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment">

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/logout"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/welcome_message_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/welcome_message_option_text"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/welcome_message_option_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_welcome_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcome_message_switch"
        app:layout_constraintBottom_toBottomOf="@id/welcome_message_switch"
        app:layout_constraintEnd_toStartOf="@id/welcome_message_switch"/>

    <TextView
        android:id="@+id/welcome_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_message_switch"
        android:layout_marginTop="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>